@@ -77,33 +77,33 @@ sugar.pod
 sugar-doc.html
 sugar-doc.info
 
-win32/doc
-win32/libsugar
-win32/lib/32
-win32/lib/64
-win32/include/float.h
-win32/include/stdarg.h
-win32/include/stdbool.h
-win32/include/stddef.h
-win32/include/varargs.h
-win32/include/sugarlib.h
+src/win32/doc
+src/win32/libsugar
+src/win32/lib/32
+src/win32/lib/64
+src/win32/include/float.h
+src/win32/include/stdarg.h
+src/win32/include/stdbool.h
+src/win32/include/stddef.h
+src/win32/include/varargs.h
+src/win32/include/sugarlib.h
 
-tests/sugartest[1234]
-tests/sugartest.gcc
-tests/*.out*
-tests/*.ref
-tests/*.txt
-tests/*.gcc
-tests/*-cc*
-tests/*-sugar*
-tests/libsugar_test
-tests/libsugar_test_mt
-tests/asm-c-connect
-tests/asm-c-connect-sep
-tests/vla_test
-tests/hello
-tests/tests2/fred.txt
-libsugar.dylib
+src/tests/sugartest[1234]
+src/tests/sugartest.gcc
+src/tests/*.out*
+src/tests/*.ref
+src/tests/*.txt
+src/tests/*.gcc
+src/tests/*-cc*
+src/tests/*-sugar*
+src/tests/libsugar_test
+src/tests/libsugar_test_mt
+src/tests/asm-c-connect
+src/tests/asm-c-connect-sep
+src/tests/vla_test
+src/tests/hello
+src/tests/tests2/fred.txt
+src/libsugar.dylib
 
 # OSX crap
 .DS_Store
