@@ -1,0 +1,8 @@
+#!/usr/local/bin/sugar -run
+#include <sugarlib.h>
+
+int main()
+{
+    printf("Hello World\n");
+    return 0;
+}
