@@ -1,4 +1,3 @@
-#!///usr/local/bin/sugar -run
 #include <sugarlib.h>
 
 int fib(n)
